revamp Bootstrapper gossiping pt 1. resolve long-standing async issue with GenesisAssembly